<resources>
    <string name="app_name">Camera</string>
    <string name="main">主页</string>
    <string name="pictures">相片</string>
    <string name="camera">摄像头</string>
    <string name="clock">定时</string>
    <string name="delete">删除</string>
    <string name="camera_front">前置摄像头</string>
    <string name="camera_back">后置摄像头</string>
    <string name="camera_external">外置摄像头</string>
    <string name="sure">确认修改</string>
    <string name="second">定时拍照间隔秒数</string>
    <string name="deleteAll">清空照片存储</string>
</resources>