<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/camera"
        android:icon="@drawable/camera"
        app:showAsAction="always"
        android:title="@string/camera">
        <menu>
            <group>
                <item
                    android:id="@+id/camera_front"
                    android:icon="@drawable/camera"
                    android:title="@string/camera_front"
                    app:showAsAction="never">
                </item>
                <item
                    android:icon="@drawable/camera"
                    android:id="@+id/camera_back"
                    android:title="@string/camera_back"
                    app:showAsAction="never">
                </item>
                <item
                    android:icon="@drawable/camera"
                    android:id="@+id/camera_external"
                    android:title="@string/camera_external"
                    app:showAsAction="never">
                </item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/clock"
        android:icon="@drawable/clock"
        app:showAsAction="always"
        android:title="@string/clock"/>
    <item
        android:id="@+id/behave"
        android:icon="@drawable/more"
        app:showAsAction="always"
        android:title="@string/delete">
        <menu>
            <group>
                <item
                    android:id="@+id/delete"
                    android:icon="@drawable/start"
                    app:showAsAction="never"
                    android:title="@string/delete"/>
            </group>
        </menu>
    </item>
</menu>